Changed java version to 11. Updated pom.xml to support JAR creation.